@@ -3,6 +3,8 @@
 a file is a JPEG file.
 * always run the marker search program and no longer as an optional pre-run
 scan. This also simplifies the other pre-run scans a bit.
+* only run the marker searches for the magic types that are defined in the
+configuration. This speeds up scanning a tiny bit.
 
 2011-12-23
 * stubs for adding a 'noscan' directive that scans can use to say which
